fixtures/benchmark/negatives/n20.py
error_message = 'gpt-5.1-codex-mini'
